update1index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</div>
 		<header class="header">
 		  	<div class="img_wrapper">
-		  		<img src="images/bg.jpg" alt="background-image">
+		  		<img src="bg.jpg" alt="background-image">
 		  	</div>
 		  	<div class="banner">
 		  		<h1>Architecture & Interior Design</h1>
@@ -97,7 +97,7 @@
 					<p class="service_text">The previous chapter looked at comparing populations to see if there is a difference between the two. That involved two random variables that are similar measures.</p>
 			</div>
 			<div class="about_us_img_wrapper">
-					<img src="images/house.png" alt="house image">
+					<img src="house.png" alt="house image">
 				</div>
 		</div>
 		</section>
@@ -109,7 +109,7 @@
 			<div class="cards_wrapper">
 				<div class="card" data-tilt>
 					<div class="card_img_wrapper">
-						<img src="images/person-1.jpg" alt="CEO">
+						<img src="person-1.jpg" alt="CEO">
 					</div>
 					<div class="card_info">
 						<h2>John Smith</h2>
@@ -120,7 +120,7 @@
 				</div>
 							<div class="card" data-tilt>
 					<div class="card_img_wrapper">
-						<img src="images/person-2.jpg" alt="Desinger">
+						<img src="person-2.jpg" alt="Desinger">
 					</div>
 					<div class="card_info">
 						<h2>Ann Brown</h2>
@@ -131,7 +131,7 @@
 				</div>
 							<div class="card" data-tilt>
 					<div class="card_img_wrapper">
-						<img src="images/person-3.jpg" alt="Architect">
+						<img src="person-3.jpg" alt="Architect">
 					</div>
 					<div class="card_info">
 						<h2>Merry Doe</h2>
