--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=devicve-width,initial-scale=1.0">
 	<title>Architect Website</title>
 	<link rel="stylesheet"  href="style.css">
-	<link rel="stylesheet"  href="https://pro.fontawesome.com/release/v5.10.0/css/duotone.css" integrity="sha384-R3QzTxyukP03CMqKFe0ssp5wUvBPEyy9ZspCB+Y01fEjhMwcXixTyeot+S40+AjZ">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
 	<!-- <link href="link of google font" -->
 </head>
 <body>
