--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 		<footer class="footer">
 			<div class="footer_content">
 				<p class="copyright">
-					Copyright &copy; 2021, GaneshDeokar All Right Reserved
+					Copyright &copy; 2021, <a href="https://www.linkedin.com/in/ganesh-deokar-a1a29921a/">GaneshDeokar</a> All Right Reserved
 				</p>
 				<div class="social_list">
 					<a href="#"><i class="fab fa-facebook-f"></a>
